# telco-dark-noc-quickstart

./: README.md
hub/agent-service/: pyproject.toml
hub/agent-service/src/agent_service/: __init__.py
hub/chatbot-service/: pyproject.toml
hub/chatbot-service/src/chatbot_service/: __init__.py
hub/frontend/: pyproject.toml
hub/mcp-servers/mcp-aap/: pyproject.toml
hub/mcp-servers/mcp-aap/src/mcp_aap/: __init__.py
hub/mcp-servers/mcp-kafka/: pyproject.toml
hub/mcp-servers/mcp-kafka/src/mcp_kafka/: __init__.py
hub/mcp-servers/mcp-lokistack/: pyproject.toml
hub/mcp-servers/mcp-lokistack/src/mcp_lokistack/: __init__.py
hub/mcp-servers/mcp-openshift/: pyproject.toml
hub/mcp-servers/mcp-openshift/src/mcp_openshift/: __init__.py
hub/mcp-servers/mcp-servicenow/: pyproject.toml
hub/mcp-servers/mcp-servicenow/src/mcp_servicenow/: __init__.py
